<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_dialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:background="@drawable/bg_white_12"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/margin_24dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imv_icon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/r5" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title"
                style="@style/medium_500"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_6dp"
                android:gravity="center"
                android:text="@string/str_title_rate_dialog_45"
                android:textSize="@dimen/margin_20dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_message"
                style="@style/regular_400"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_6dp"
                android:gravity="center"
                android:text="@string/str_quote_rate_dialog_45" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_12dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imv_1"
                    android:layout_width="@dimen/margin_32dp"
                    android:layout_height="@dimen/margin_32dp"
                    android:layout_marginEnd="@dimen/margin_4dp"
                    android:src="@drawable/ic_star_yellow" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imv_2"
                    android:layout_width="@dimen/margin_32dp"
                    android:layout_height="@dimen/margin_32dp"
                    android:layout_marginEnd="@dimen/margin_4dp"
                    android:src="@drawable/ic_star_yellow" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imv_3"
                    android:layout_width="@dimen/margin_32dp"
                    android:layout_height="@dimen/margin_32dp"
                    android:layout_marginEnd="@dimen/margin_4dp"
                    android:src="@drawable/ic_star_yellow" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imv_4"
                    android:layout_width="@dimen/margin_32dp"
                    android:layout_height="@dimen/margin_32dp"
                    android:layout_marginEnd="@dimen/margin_4dp"
                    android:src="@drawable/ic_star_yellow" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imv_5"
                    android:layout_width="@dimen/margin_32dp"
                    android:layout_height="@dimen/margin_32dp"
                    android:src="@drawable/ic_star_yellow" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_rate"
                style="@style/medium_500"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/margin_48dp"
                android:layout_marginTop="@dimen/margin_24dp"
                android:background="@drawable/bg_btn_rate"
                android:paddingHorizontal="@dimen/_48sdp"
                android:text="@string/str_rate"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_close"
                style="@style/regular_400"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_10dp"
                android:text="@string/str_maybe_late"
                android:textColor="#888989" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>