<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_background"
        tools:context=".ui.InstructionActivity">

        <com.spin.wheel.chooser.wheeloffortune.custom.HeaderView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hv_screen="instruction"
            app:hv_show_back="false"
            app:hv_show_done="false"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:fontFamily="@font/vn_medium"
            android:text="@string/skip"
            android:textSize="@dimen/_15ssp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/header"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imv_banner"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:src="@drawable/img_instruction"
            app:layout_constraintDimensionRatio="360:240"
            app:layout_constraintTop_toBottomOf="@id/header" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/vn_regular"
            android:text="@string/des_instruction"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintTop_toBottomOf="@id/imv_banner" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_got_it"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/bg_btn_start"
            android:fontFamily="@font/svn_bango"
            android:text="@string/str_got_it"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintTop_toBottomOf="@id/tv_description" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_got_it_bot"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:background="@drawable/bg_btn_start"
            android:fontFamily="@font/svn_bango"
            android:text="@string/str_got_it"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>