<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@color/color_background"
        tools:context=".ui.OnboardingActivity">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vp_tab"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/ll"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/rlNative"
            tools:layout_editor_absoluteX="0dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/vn_bold"
                android:gravity="center"
                android:text="@string/str_title_onboarding_1"
                android:textColor="@color/color_F0B90B"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_quote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/vn_regular"
                android:gravity="center"
                android:maxLines="2"
                android:text="@string/str_quote_onboarding_1"
                android:textColor="@color/white"
                android:textSize="@dimen/_11ssp" />

            <com.spin.wheel.chooser.wheeloffortune.custom.DotPageView
                android:id="@+id/dot_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/vn_regular"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/str_next"
                android:textAllCaps="true"
                android:textColor="@color/color_F0B90B"
                android:textSize="@dimen/_13ssp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <FrameLayout
            android:id="@+id/rlNative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent">

            <FrameLayout
                android:id="@+id/fr_native_ads"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:visibility="visible">

<!--                <include layout="@layout/native_button_bot_loading" />-->
            </FrameLayout>
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>