<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@color/color_background"
        android:orientation="vertical"
        android:paddingTop="@dimen/_34sdp"
        tools:context=".ui.MainActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imv_title"
            android:layout_width="0dp"
            android:layout_height="@dimen/_28sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:scaleType="fitCenter"
            android:src="@drawable/img_app_name"
            app:layout_constraintBottom_toBottomOf="@id/imv_setting"
            app:layout_constraintEnd_toStartOf="@id/imv_setting"
            app:layout_constraintStart_toEndOf="@id/imv_instruction"
            app:layout_constraintTop_toTopOf="@id/imv_setting" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imv_setting"
            android:layout_width="@dimen/_34sdp"
            android:layout_height="@dimen/_34sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_setting"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imv_instruction"
            android:layout_width="@dimen/_34sdp"
            android:layout_height="@dimen/_34sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_instruction"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintBottom_toTopOf="@id/rlBanner"
            app:layout_constraintTop_toBottomOf="@id/imv_title">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/_16sdp"
                android:paddingBottom="@dimen/_10sdp">

                <com.spin.wheel.chooser.wheeloffortune.custom.HomeButton
                    android:id="@+id/btn_chooser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    app:hb_icon="@drawable/img_chooser"
                    app:hb_icon_left="true"
                    app:hb_name="@string/str_chooser" />

                <FrameLayout
                    android:id="@+id/rlNative"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp">

                    <FrameLayout
                        android:id="@+id/fr_native_ads"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="visible">

                        <include layout="@layout/native_bot_horizontal_media_left_loading" />
                    </FrameLayout>
                </FrameLayout>

                <com.spin.wheel.chooser.wheeloffortune.custom.HomeButton
                    android:id="@+id/btn_homo_graft"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    app:hb_icon="@drawable/img_homo"
                    app:hb_icon_left="false"
                    app:hb_name="@string/str_homograft" />

                <com.spin.wheel.chooser.wheeloffortune.custom.HomeButton
                    android:id="@+id/btn_ranking"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    app:hb_icon="@drawable/img_rank"
                    app:hb_icon_left="true"
                    app:hb_name="@string/str_ranking" />

                <com.spin.wheel.chooser.wheeloffortune.custom.HomeButton
                    android:id="@+id/btn_roulette"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    app:hb_icon="@drawable/img_roulette"
                    app:hb_icon_left="false"
                    app:hb_name="@string/str_roulette" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.core.widget.NestedScrollView>

        <FrameLayout
            android:id="@+id/rlBanner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent">

            <include
                android:id="@+id/include"
                layout="@layout/layout_banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>